# igdb-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.sh
examples/: download_game_images.rs  external_game.rs  franchise_games.rs  game_age_rating.rs  game_characters.rs  game_characters_mugshot.rs  game_engine_info.rs  game_media_download.rs  game_media_read.rs  game_multiplayer_info.rs  game_platforms.rs  game_platforms_logos.rs  game_rating.rs  game_release_date.rs  game_theme.rs  game_video_urls.rs  logging.rs  multiplayer_custom_query.rs  player_perspectives.rs  request_builder_game.rs  request_builder_multiplayer.rs  search_first_game_by_name.rs  search_game_by_name.rs  search_games_by_name.rs
src/: client.rs  client_macros.rs  endpoint_client.rs  endpoints.rs  game_extensions.rs  lib.rs  macros.rs  main.rs  media.rs  media_extensions.rs  media_helpers.rs  media_macros.rs  media_quality.rs  request_builder.rs  request_filters.rs
src/extensions/: character_extensions.rs  franchise_extensions.rs  game_extensions.rs  mod.rs
src/model/: age_rating.rs  artwork.rs  category.rs  character.rs  character_mug_shot.rs  company.rs  cover.rs  engine.rs  enums.rs  external_game.rs  franchise.rs  game_mode.rs  game_video.rs  games.rs  keyword.rs  mod.rs  multiplayer_mode.rs  platform.rs  platform_logo.rs  player_perspective.rs  rating.rs  release_date.rs  screenshot.rs  status.rs  theme.rs  website.rs
src/v3/: endpoints.rs  mod.rs  request_builder.rs
src/v3/model/: games.rs  mod.rs  rating.rs
