[package]
name = "igdb-rs"
version = "0.0.1"
authors = ["Carlos Landeras"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/CarlosLanderas/igdb-client"
homepage = "https://github.com/CarlosLanderas/igdb-client"
documentation = "https://docs.rs/igdb-client"
description = "IGDB - Video Game Database Api"
keywords = ["igdb", "video game database", "video games", "video", "async", "playstation", "xbox", "pc", "database", "api", "client"]
categories = ["videogame", "api", "asynchronous"]
readme = "README.md"

[dependencies]
async-std = "0.99.4"
surf = "1.0.1"
serde_derive = "1.0.99"
serde_json = "1.0.40"
serde = "1.0.99"
serde_repr = "0.1.5"
http = "0.1.18"
url = "2.1.0"
isahc = "0.7"

[dev-dependencies]
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly","compat"] }

[[example]]
name = "search-first-game-by-name"
path = "examples/search_first_game_by_name.rs"
[[example]]
name = "search-games-by-name"
path = "examples/search_games_by_name.rs"
[[example]]
name = "download-game-images"
path = "examples/download_game_images.rs"
[[example]]
name = "multiplayer-custom-query"
path = "examples/multiplayer_custom_query.rs"
[[example]]
name = "game-engine-info"
path = "examples/game_engine_info.rs"
[[example]]
name = "game-video-urls"
path = "examples/game_video_urls.rs"
[[example]]
name = "game-platforms"
path = "examples/game_platforms.rs"
[[example]]
name = "game-release-date"
path = "examples/game_release_date.rs"
[[example]]
name = "game-characters"
path = "examples/game_characters.rs"