[package]
name = "igdb-rs"
version = "0.0.24"
authors = ["Carlos Landeras"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/CarlosLanderas/igdb-rs"
homepage = "https://github.com/CarlosLanderas/igdb-rs"
documentation = "https://docs.rs/igdb-rs"
description = "IGDB - Video Game Database Api"
keywords = ["igdb", "videogames", "database", "api", "client"]
categories = ["games", "api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
async-std = "0.99.4"
surf = "1.0.2"
serde_derive = "1.0.99"
serde_json = "1.0.40"
serde = "1.0.99"
serde_repr = "0.1.5"
http = "0.1.18"
url = "2.1.0"
log = "0.4.8"

[dev-dependencies]
femme = "1.2.0"

[[example]]
name = "search-first-game-by-name"
path = "examples/search_first_game_by_name.rs"
[[example]]
name = "search-games-by-name"
path = "examples/search_games_by_name.rs"
[[example]]
name = "download-game-images"
path = "examples/download_game_images.rs"
[[example]]
name = "request-builder-multiplayer"
path = "examples/request_builder_multiplayer.rs"
[[example]]
name = "request-builder-game"
path = "examples/request_builder_game.rs"
[[example]]
name = "game-engine-info"
path = "examples/game_engine_info.rs"
[[example]]
name = "game-video-urls"
path = "examples/game_video_urls.rs"
[[example]]
name = "game-platforms"
path = "examples/game_platforms.rs"
[[example]]
name = "game-release-date"
path = "examples/game_release_date.rs"
[[example]]
name = "game-characters"
path = "examples/game_characters.rs"
[[example]]
name = "logging"
path = "examples/logging.rs"
[[example]]
name = "game-rating"
path = "examples/game_rating.rs"
[[example]]
name = "game-theme"
path = "examples/game_theme.rs"
[[example]]
name = "franchise-games"
path = "examples/franchise_games.rs"
[[example]]
name = "game-age-rating"
path = "examples/game_age_rating.rs"
[[example]]
name = "player-perspectives"
path = "examples/player_perspectives.rs"