[package]
name = "igdb-rs"
version = "0.2.0"
authors = ["Carlos Landeras"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/CarlosLanderas/igdb-rs"
homepage = "https://github.com/CarlosLanderas/igdb-rs"
documentation = "https://docs.rs/igdb-rs"
description = "IGDB - Video Game Database Api"
keywords = ["igdb", "videogames", "database", "api", "client"]
categories = ["games", "api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
async-std = { version = "1.12.0", features = ["tokio1"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde_derive = "1.0.151"
serde_json = "1.0.89"
serde = "1.0.151"
serde_repr = "0.1.9"
http = "0.2.8"
url = "2.3.1"
log = "0.4.17"

[dev-dependencies]
femme = "2.2.1"

[[example]]
name = "search-first-game-by-name"
path = "examples/search_first_game_by_name.rs"
[[example]]
name = "search-games-by-name"
path = "examples/search_games_by_name.rs"
[[example]]
name = "game-media-download"
path = "examples/game_media_download.rs"
[[example]]
name = "game-media-read"
path = "examples/game_media_read.rs"
[[example]]
name = "request-builder-multiplayer"
path = "examples/request_builder_multiplayer.rs"
[[example]]
name = "request-builder-game"
path = "examples/request_builder_game.rs"
[[example]]
name = "game-engine-info"
path = "examples/game_engine_info.rs"
[[example]]
name = "game-video-urls"
path = "examples/game_video_urls.rs"
[[example]]
name = "game-platforms"
path = "examples/game_platforms.rs"
[[example]]
name ="game-platforms-logos"
path = "examples/game_platforms_logos.rs"
[[example]]
name = "game-release-date"
path = "examples/game_release_date.rs"
[[example]]
name = "game-characters"
path = "examples/game_characters.rs"
[[example]]
name = "logging"
path = "examples/logging.rs"
[[example]]
name = "game-rating"
path = "examples/game_rating.rs"
[[example]]
name = "game-theme"
path = "examples/game_theme.rs"
[[example]]
name = "franchise-games"
path = "examples/franchise_games.rs"
[[example]]
name = "game-age-rating"
path = "examples/game_age_rating.rs"
[[example]]
name = "player-perspectives"
path = "examples/player_perspectives.rs"
[[example]]
name = "game-characters-mugshot"
path = "examples/game_characters_mugshot.rs"